--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
 baseurl = "http://wyb0.com"
 languageCode = "en-us"
 copyright = "&copy; 2016-2017 Reber. All Rights Reserved."
-canonifyurls = true
-
+Paginate = 10 #首页显示几篇文章的摘要
 
 
 [indexes]
@@ -12,7 +11,6 @@ canonifyurls = true
 [Params]
     Logo = "<img src='/img/logo.png' width='70px'>" #Reber's Blog
     Author = "reber"
-    Paginate = 10
     DateFormat = "2006-01-02"
 
     [Params.Social]
