--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "http://wyb0.com"
 languageCode = "en-us"
-copyright = "&copy; 2016-2017 Reber. All Rights Reserved."
+copyright = "Copyright &copy; 2016-2017 Reber. All Rights Reserved."
 Paginate = 10 #首页显示几篇文章的摘要
 
 
