--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 baseurl = "http://wyb0.com"
 languageCode = "en-us"
-copyright = "Copyright &copy; 2016-2017 Reber. All Rights Reserved."
 Paginate = 10 #首页显示几篇文章的摘要
 
 
@@ -11,7 +10,9 @@ Paginate = 10 #首页显示几篇文章的摘要
 [Params]
     Logo = "<img src='/img/logo.png' width='70px'>" #Reber's Blog
     Author = "reber"
-    DateFormat = "2006-01-02"
+    Description = "我的个人博客，主要用于记录自己的一些学习笔记之类的东西，其中有漏洞挖掘、渗透测试、python、php等。"
+    Copyright = "Copyright &copy; 2016-2017 Reber. All Rights Reserved."
+    DateFormat = "2006-01-02" #文章后的日期格式
 
     [Params.Social]
         GitHub = "reber0"
