--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ Paginate = 10 #首页显示几篇文章的摘要
     Logo = "<img src='/img/logo.png' width='70px'>" #Reber's Blog
     Author = "reber"
     Title = "Reber's Blog"
-    Description = "我的个人博客，主要用于记录自己的一些学习笔记之类的东西，其中有漏洞挖掘、渗透测试、python、php等。"
+    Description = "我的个人博客，主要用于记录自己的一些学习笔记之类的东西，其中有渗透测试、python、php等。"
     Copyright = "Copyright &copy; 2016-2017 Reber. All Rights Reserved."
     DateFormat = "2006-01-02" #文章后的日期格式
 
