--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ Paginate = 10 #首页显示几篇文章的摘要
 
     [Params.Strings]
         Search = "Search" #搜索
-        Categories = "Categories" #分类
+        Categories = "Categorie" #分类
         Archive = "Archive" #归档
         Tags = "Tags" #标签
         TagCloud = "TagCloud" #标签云
