--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,7 @@ Paginate = 10 #首页显示几篇文章的摘要
         Tags = "Tags" #标签
         TagCloud = "TagCloud" #标签云
         Links = "Links" #友链
+        Social = "Social"
 
 [Menu]
     [[Menu.Main]]
